Regression: Array modifier change a merged Root vertex of Skin modifier #109565

Closed
opened 2023-06-30 19:12:35 +02:00 by Vitual · 1 comment
First-time contributor

Blender Version
Broken: version: 3.6.0 Release Candidate, branch: blender-v3.6-release, commit date: 2023-06-26 12:12, hash: f7d46d0644
Worked: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-06-03 10:34, hash: 2ce5fc4a3e

Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-13 11:02, hash: e165dae3b8
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-07 18:09, hash: 3ca1e828e2

Short description of error
Array modifier with enabled Merge vertex option propagate a Root vertex of Skin modifier for merged vertices:

2ce5fc4a3e / 3ca1e828e2 f7d46d0644 / e165dae3b8
image image

Exact steps for others to reproduce the error

  1. Create edge line with 3 points.
  2. Add Array modifier:
    a. Count: 2.
    b. Merge: Enable.
  3. Add Skin modifier:
    a. Set first point of edge line as root.
    Note that previously this vertex would have been the first one, since the merging takes place.
**Blender Version** Broken: version: 3.6.0 Release Candidate, branch: blender-v3.6-release, commit date: 2023-06-26 12:12, hash: f7d46d064487 Worked: version: 3.6.0 Beta, branch: blender-v3.6-release, commit date: 2023-06-03 10:34, hash: 2ce5fc4a3e43 Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-13 11:02, hash: e165dae3b856 Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-07 18:09, hash: 3ca1e828e22b **Short description of error** Array modifier with enabled Merge vertex option propagate a Root vertex of Skin modifier for merged vertices: | 2ce5fc4a3e43 / 3ca1e828e22b | f7d46d064487 / e165dae3b856 | | -- | -- | | ![image](/attachments/f384a130-d751-49d0-8ec8-7337e206f62e) | ![image](/attachments/16053bd1-12be-431e-a219-b4aac3f9349a) | **Exact steps for others to reproduce the error** 1. Create edge line with 3 points. 2. Add Array modifier: a. Count: 2. b. Merge: Enable. 3. Add Skin modifier: a. Set first point of edge line as root. Note that previously this vertex would have been the first one, since the merging takes place.
Vitual added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-30 19:12:36 +02:00
Iliya Katueshenock changed title from SubDiv+Array+Skin+SabDiv=bug to Regression: Incorrect Skin modifier result for edge line of unordered vertices 2023-06-30 19:35:43 +02:00
Iliya Katueshenock added
Module
Modeling
Status
Confirmed
Interest
Modifiers
and removed
Status
Needs Triage
labels 2023-06-30 19:35:58 +02:00
Iliya Katueshenock changed title from Regression: Incorrect Skin modifier result for edge line of unordered vertices to Regression: Array modifier change a Root Vertex of Skin modifier 2023-06-30 19:59:14 +02:00
Iliya Katueshenock added
Priority
High
and removed
Priority
Normal
labels 2023-06-30 20:17:40 +02:00
Iliya Katueshenock changed title from Regression: Array modifier change a Root Vertex of Skin modifier to Regression: Array modifier change a merged Root vertex of Skin modifier 2023-06-30 20:18:34 +02:00
Iliya Katueshenock added this to the 3.6 LTS milestone 2023-06-30 20:45:38 +02:00

Probably caused by f8617fe71b
@mano-wii /

Probably caused by f8617fe71bc1a8b0755772b5b940e1fd6ceae8f0 @mano-wii /
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-06 15:06:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109565
No description provided.