Fix #109565: Array modifier changes the Root vertex of Skin modifier

This commit applies the latest changes to the merge by distance code.
All are related to the `do_mix_vert_data` feature.

This feature is essential for fixing #109565.

The commits are (from newest to oldest):
- 36b2291610
- 7aa31c884d
- e9aba52f42
- 1457c0c533
- 113004687d
- 74772c6920